@@ -9,7 +9,7 @@ client as a portable AppImage.
 
 This utility pulls the Ubuntu 18.04 docker image and then
 downloads, extracts, and repackages the Plastic SCM clients
-using AppImage's `pkg2appimage` tool.
+and all dependencies using AppImage's `pkg2appimage` tool.
 See https://github.com/AppImage/pkg2appimage
 
 ## Prerequisites
@@ -37,11 +37,42 @@ can run it with:
 $ ./out/Plastic_SCM_Client.glibc2.25-x86_64.AppImage
 ```
 
+The build now exposes the command-line tools as well. You
+can create the following symlinks to the AppImage and it
+will autodetect which tool you want to start:
+
+- cm
+- gluon
+- gtkmergetool
+- gtkplastic
+- legacygluon
+- legacyplasticgui
+- plasticgui
+- linplasticx
+
+As an example:
+
+```
+$ sudo cp Plastic_SCM_Client.glibc2.25-x86_64.AppImage /opt/
+$ mkdir -p ~/.local/bin
+$ for cmd in cm gluon gtkmergetool gtkplastic legacygluon legacyplasticgui plasticgui linplasticx
+  do
+    ln -s /opt/Plastic_SCM_Client.glibc2.25-x86_64.AppImage ~/.local/bin/$cmd
+  done
+```
+
+Be sure to add `~/.local/bin` to your $PATH (e.g. in `~/.bashrc`)
+
+Then you can use those commands to start the relevant tools from the AppImage.
+
 ## Limitations
 
-The resulting AppImage exposes the Plastic SCM GUIs, but not the
-command line `cm` tool or server software. Though support for
-those may be added in a future update.
+After the build, you may want to run `docker image prune` to reclaim
+some disk space. The script doesn't do this for you, because you may
+have other docker images that you don't want pruned.
+
+You will need to rebuild the AppImage when new versions of the
+PlasticSCM utilities are available.
 
 This has been lightly tested on Ubuntu 20.04 and 22.04, but has
 not yet been tested on other systems.
