@@ -9,12 +9,13 @@ ingredients:
     - plasticscm-gtk-sharp-mono4
     - plasticscm-mono4
     - plasticscm-theme
+    - libgnomeui-0
   sources:
     - deb http://us.archive.ubuntu.com/ubuntu/ bionic main universe
     - deb https://www.plasticscm.com/plasticrepo/stable/ubuntu
   script:
     - pwd
-    - apt-get download plasticscm-client-gtk plasticscm-certtools-mono4 plasticscm-client-core plasticscm-gnome-sharp-mono4 plasticscm-gtk-sharp-mono4 plasticscm-mono4 plasticscm-theme
+    - apt-get download plasticscm-client-gtk plasticscm-certtools-mono4 plasticscm-client-core plasticscm-gnome-sharp-mono4 plasticscm-gtk-sharp-mono4 plasticscm-mono4 plasticscm-theme libgnomeui-0
 script:
   - pwd
   - mv usr/share/applications/plasticx.desktop Plastic_SCM.desktop
@@ -36,14 +37,9 @@ script:
   - ln -s ../../opt/plasticscm5/client/plasticapi usr/bin/plasticapi
   - ln -s ../../opt/plasticscm5/client/linplasticx usr/bin/plasticgui
   - ln -s ../../opt/plasticscm5/client/linplasticx usr/bin/linplasticx
+  - ln -s libgnomeui-2.so.0 usr/lib/x86_64-linux-gnu/liblibgnomeui-2.so.0
+  - cp opt/plasticscm5/theme/avalonia/icons/iconfolder.svg opt/plasticscm5/theme/avalonia/icons/iconnofilesanddirectorieslight.svg
   - rm AppRun
-  - cat > AppRun <<\EOF
-  - #!/bin/bash
-  - export GIO_MODULE_DIR=$APPDIR/usr/lib/x86_64-linux-gnu/gio/modules
-  - export PATH=$APPDIR/usr/bin/:$APPDIR/usr/sbin/:$APPDIR/bin/:$APPDIR/sbin/:$PATH
-  - export LD_LIBRARY_PATH=$APPDIR/usr/lib/:$APPDIR/usr/lib/i386-linux-gnu/:$APPDIR/usr/lib/x86_64-linux-gnu/:$APPDIR/usr/lib32/:$APPDIR/usr/lib64/:$APPDIR/lib/:$APPDIR/lib/i386-linux-gnu/:$APPDIR/lib/x86_64-linux-gnu/:$APPDIR/lib32/:$APPDIR/lib64/:$LD_LIBRARY_PATH
-  - $APPDIR/usr/bin/linplasticx $@
-  - exit $?
-  - EOF
+  - cp /root/AppRun .
   - chmod +x AppRun
 
